# safe-ai-util-mcp

./: .gitignore  .ruleset.json  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/safe_ai_util_mcp/: __init__.py  server.py  tools.py
tests/: test_smoke.py  test_tools.py
